# jaxem

./: .gitignore  .gitmodules  LICENSE  README.md  plot_config.py  pyproject.toml
analyze/: parse_times.py
jaxem/: Channel.py  Config.py  Map.py  Potential.py  TMatrix.py  Tools.py  __init__.py  channels.py  config.py  emulator.py  mesh.py  oldemulator.py  oldemulator2.py  sampler.py  solver.py  utils.py
output/: benchmark_chiral.out  benchmark_chiral.txt  benchmark_chiral_Nq40.txt  benchmark_emulator_Nq40.out  benchmark_emulator_Nq40.txt  benchmark_emulator_Nq60.txt  new_benchmark_chiral_Nq40.out  new_benchmark_chiral_Nq40.txt  time_chiral_Nq120.txt  time_chiral_Nq160.txt  time_chiral_Nq200.txt  time_chiral_Nq240.txt  time_chiral_Nq40.out  time_chiral_Nq40.txt  time_chiral_Nq56.txt  time_chiral_Nq80.txt
saved_emulators/: benchmark_chiral.out
saved_potentials/: benchmark_chiral_Nq40_c.info  benchmark_emulator_Nq40_c.info  benchmark_emulator_Nq40_cc.pot  benchmark_emulator_Nq60_c.info  chiral_Nq40_c.info  chiral_Nq40_c.pot  chiral_Nq40_cc.info  chiral_Nq40_cc.pot
scripts/: benchmark_emulator.py  benchmark_solver.py  cross_section_speedup.py  plot_cross_section_speedup.py  plot_posterior_LECs.py  plot_posterior_SGT.py  plot_posterior_phase_shifts.py  plot_posteriors.py  sample_posteriors.py  test.py  train_emulators.py
test/: BenchmarkChiral.ini  BenchmarkChiral.py  BenchmarkEmulator.ini  BenchmarkEmulator.py  BenchmarkMalflietTjon.ini  BenchmarkMalflietTjon.py  Test.py  TimeChiral.ini  TimeChiral.py  bayesian_parameter_estimation.py  benchmark_emulators.py  (+9 more)
(+59 files in other folders)
