[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxem"
version = "0.1.0"
description = "A JAX-based nucleon-nucleon scattering package"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "setuptools",
    "cython",
    "jupyterlab",
    "jax",
    "scikit-learn",
    "pandas",
    "corner"
]

[tool.setuptools]
packages = ["jaxem"]
